--- a/ENNApp/templates/ENNApp/listNeuralNetworks.html
+++ b/ENNApp/templates/ENNApp/listNeuralNetworks.html
@@ -61,7 +61,7 @@
             </table>
           </div>
           <br>
-          <button type="button" id="gotoUploadViewButtom" onclick="location.href='{% url 'uploadView' %}';" class="btn btn-primary centerButtom">Add New neuralNetwork (TODO)</button>
+          <button type="button" id="gotoUploadViewButtom" onclick="location.href='{% url 'selectDataset' %}';" class="btn btn-primary centerButtom">New Neural Network</button>
         </div>
         <div class="card-footer small text-muted"></div>
 
