--- a/ENNApp/templates/ENNApp/listNeuralNetworks.html
+++ b/ENNApp/templates/ENNApp/listNeuralNetworks.html
@@ -48,7 +48,10 @@
                             <form class="form-inline" >
                                 <div class="buttomGroup form-group">
                                     {% if neuralNetwork.userOwner == user.username %}
-                                    <i class="editbuttom fas fa-edit"></i>
+                                    <i onclick="location.href='/detailNeuralNetwork/{{ neuralNetwork.name }}';" class="editbuttom fas fa-eye"></i>
+                                    {% endif %}
+                                    {% if neuralNetwork.codeUrl != "" %}
+                                    <i onclick=' window.open("{{ neuralNetwork.codeUrl }}");' class="downloadCode fas fa-file-code"></i>
                                     {% endif %}
                                     <i onclick="location.href='{{ neuralNetwork.url }}';" class="downloadbuttom fas fa-file-download"></i>
                                     <i class="deletebuttom far fa-trash-alt" data-toggle="modal" data-target="#DeleteMessageModal" data-url="{{ neuralNetwork.deleteUrl }}"></i>
